Changes in version 0.99.0 (2021-03-19)
+ Submitted to Bioconductor

Changes in version 1.1.x (2021-06-04)
+ split transformCounts into transformSamples and transformFeatures
+ added log_modulo_skewness as a diversity index
+ added functions for summarizing dominant taxa information
+ added wrapper for adding dominant taxa information to colData
+ added specialized subsetting function for subsetting by prevalence (subsetByPrevalentTaxa/subsetByRareTaxa)
+ added mapTaxonomy
+ added estimateDivergence
+ bugfix: makePhyloseqFromTreeSummarizedExperiment checks now for rowTree be compatible