@@ -204,7 +204,11 @@ setMethod("meltAssay", signature = c(x = "SummarizedExperiment"),
 #' @importFrom tidyr pivot_longer
 #' @importFrom rlang sym
 .melt_assay <- function(x, abund_values, feature_name, sample_name, check_names = FALSE) {
-    assay(x, abund_values) %>%
+    mat <- assay(x, abund_values) %>%
+        as.matrix() 
+    rownames(mat) <- rownames(x)
+    colnames(mat) <- colnames(x)
+    mat %>%
         data.frame(check.names = check_names) %>%
         rownames_to_column(feature_name) %>%
         # SampleID is unique sample id
